--- a/src/components/ActivitiesDetails/ActivitiesDetails.css
+++ b/src/components/ActivitiesDetails/ActivitiesDetails.css
@@ -2,3 +2,9 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
+.activity-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    padding: 20px;
+}
